# js_worker_module

./: BUILD.gn  README.md  README.zh.md  bundle.json  mozilla_docs.txt
helper/: object_helper.h
jsapi/: BUILD.gn
jsapi/worker/: message_queue.cpp  message_queue.h  native_module_worker.cpp  thread.cpp  thread.h  worker.cpp  worker.h  worker_helper.cpp  worker_helper.h  worker_runner.cpp  worker_runner.h
plugin/: timer.cpp  timer.h
worker/: worker.cpp  worker.h
