# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("worker") {
  include_dirs = [
    "//base/compileruntime/js_worker_module/worker",
    "//base/compileruntime/js_worker_module/helper",
    "//base/compileruntime/js_worker_module/plugin",
  ]

  sources = [
    "helper/napi_helper.cpp",
    "plugin/timer.cpp",
    "worker/message_queue.cpp",
    "worker/native_module_worker.cpp",
    "worker/thread.cpp",
    "worker/worker.cpp",
    "worker/worker_runner.cpp",
  ]

  deps = [ "//foundation/arkui/napi:ace_napi" ]

  if (is_standard_system) {
    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }

  subsystem_name = "utils"
  part_name = "jsapi_worker"

  relative_install_dir = "module"
}

group("jsapi_packages") {
  deps = [ ":worker" ]
}
